[project]
name = "ComfyUI Prompt Worker"
description = "Node:Prompt Worker. A text manipulation node for postprocessing of prompt."
version = "1.0.1"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/lenskikh/ComfyUI-Prompt-Worker"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "promptworker"
DisplayName = "ComfyUI Prompt Worker"
Icon = ""
